--- a/src/index.html
+++ b/src/index.html
@@ -3,6 +3,7 @@
 
 <head>
   <meta charset="utf-8">
+  <link rel="stylesheet" href="https://unpkg.com/element-ui/lib/theme-default/index.css">
   <title>element-starter</title>
 </head>
 
