--- a/src/index.html
+++ b/src/index.html
@@ -7,8 +7,57 @@
   <title>element-starter</title>
 </head>
 
+<script src="https://unpkg.com/vue/dist/vue.js"></script>
+<script src="https://unpkg.com/element-ui@1.4.3/lib/index.js"></script>
+
+<style>
+  .el-row {
+    margin-bottom: 20px;
+  }
+
+  .el-col {
+    border-radius: 4px;
+  }
+
+  .bg-purple-dark {
+    background: #99a9bf;
+  }
+
+  .bg-purple {
+    background: #d3dce6;
+  }
+
+  .bg-purple-light {
+    background: #e5e9f2;
+  }
+
+  .grid-content {
+    border-radius: 4px;
+    min-height: 36px;
+  }
+
+  .row-bg {
+    padding: 10px 0;
+    background-color: #f9fafc;
+  }
+</style>
+
 <body>
-  <div id="app"></div>
+<div id="app">
+<el-row type="flex" class="row-bg">
+  <el-col :span="6">
+    <div class="grid-content bg-purple"></div>
+  </el-col>
+  <el-col :span="6">
+    <div class="grid-content bg-purple-light"><div id="fade"></div></div>
+  </el-col>
+  <el-col :span="6">
+    <div class="grid-content bg-purple"></div>
+  </el-col>
+</el-row>
+</div>
 </body>
+
+<script>new Vue().$mount('#app')</script>
 
 </html>
